--- a/template/package.json
+++ b/template/package.json
@@ -43,6 +43,14 @@
     {{#lint}}
     "babel-eslint": "^7.1.1",
     {{/lint}}
+    {{#less}}
+    "less":"*",
+    "less-loader":"*",
+    {{/less}}
+    {{#sass}}
+    "sass":"*",
+    "sass-loader":"*",
+    {{/sass}}
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
